# FinancialTracker

./: .replit  daily_collector.py  dashboard.py  market_data.py  notification_manager.py  pyproject.toml  test_notifications.py  test_supabase.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Quotes-by-Category-Trading-Economics-can-provide-multiple-quotes-for-several-markets-in-a-single-re-1740235481405.txt  Pasted-import-os-import-logging-from-typing-import-Dict-Any-Optional-import-requests-import-yfinance-as-y-1740172511781.txt  Pasted-import-requests-from-bs4-import-BeautifulSoup-from-datetime-import-datetime-def-get-bank-rate--1740239679758.txt  chatgpt_com_canvas_shared_67b8ec66c05881919098c5b9fe1ab83e.md
templates/: index.html
