[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fredapi>=0.5.2",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.18.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "streamlit>=1.28.0,<2.0.0",
    "supabase>=1.0.3,<2.0.0",
    "twilio>=8.10.0,<9.0.0",
    "yfinance>=0.2.35,<0.3.0",
]
