[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "fredapi>=0.5.2",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit==1.32.0",
    "supabase==2.0.3",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "yfinance>=0.2.54",
]
